# code-advent-2024-rust

./: README.md
advent/: Cargo.toml
advent/src/day-one/: part-one.rs  part-two.rs
advent/src/day-two/: part-one.rs  part-two.rs
day-1/: Cargo.toml
day-1/src/: helper.rs  part-one.rs  part-two.rs
